kubernetes/gateways/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 30080
      name: http-app1
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 30443
      name: http-app2
      protocol: HTTP
    hosts:
    - "*"
